# openclaw-beagle-channel

./: .gitignore  API.md  ARCHITECTURE.md  BEAGLE_MEDIA_AND_ROUTING_NOTES.md  CHANGELOG.md  IMPLEMENTATION.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  binding.gyp  example.ts  index.ts  package-lock.json  package.json  setup.sh  test.ts  tsconfig.json  types.ts
docs/: BEAGLE_GROUP_DM_DETECTION.md  SETUP.md
examples/: README.md  basic-usage.ts  openclaw-agent-example.ts  package.json  test.js
extension/: index.ts  openclaw.plugin.json  runtime.ts
sidecar/: CMakeLists.txt  README.md  server.ts
sidecar/config/: default-config.json
sidecar/include/: sidecar_server.h  types.h
sidecar/src/: carrier_client.cpp  config.cpp  main.cpp  sidecar_server.cpp  utils.cpp
sidecar/systemd/: beagle-sidecar.service
src/: beagle-carrier.ts  client.ts  index.ts  provider.ts  types.ts
src/addon/: beagle_carrier.cc  carrier_wrapper.cc  carrier_wrapper.h
